# folex

./: .gitignore  CMakeLists.txt  README.md
folex/: CMakeLists.txt  package.xml
folex_bringup/: CMakeLists.txt  package.xml
folex_bringup/launch/: folex_core.launch  folex_robot.launch
folex_bringup/src/: folex_diagnostics.cpp
folex_controller/: 99-folex-u2d2.rules  CMakeLists.txt  package.xml
folex_controller/include/folex_controller/: actuator.hpp  folex_controller.h  folex_controller.hpp  kinematics.h
folex_controller/launch/: controller.launch  folex_controller.launch
folex_controller/scripts/: create_udev_rules
folex_controller/src/: actuator.cpp  folex_controller.cpp
include/: essential.hpp
include/folex/: actuator.hpp  essential.hpp  folex.hpp  kinematics.hpp  quadruped_task.hpp  trajectory.hpp
opencr/: Folex.h
opencr/folex_core/: folex.cpp  folex.h  folex_core.h  folex_core.ino  folex_diagnosis.cpp  folex_dynamixel_driver.cpp  folex_dynamixel_driver.h  kinematics.cpp  kinematics.h
opencr/folex_core/include/folex/: folex.h  folex_diagnosis.h
opencr/src/folex/: folex.cpp  folex_dynamixel_driver.cpp
scripts/: 99-u2d2-serial.rules  create_udev_rules
src/: actuator.cpp  folex.cpp  main.cpp  quadruped_task.cpp  trajectory.cpp
src/actuator/: CMakeLists.txt  actuator.cpp  actuator.hpp
src/folex/: CMakeLists.txt  folex.cpp  folex.hpp  main.cpp  quadruped_task.cpp  quadruped_task.hpp
src/socket/: CMakeLists.txt  socket_client.cpp  socket_client.hpp
src/trajectory/: CMakeLists.txt  trajectory.cpp  trajectory.hpp
