<?xml version="1.0"?>
<package format="2">
  <name>folex</name>
  <version>0.1.4</version>
  <description>
    The folex metapackage
  </description>

  <!-- License -->
  <license>TODO</license>

  <!-- Author and Maintainer -->
  <author email="danichoi737@gmail.com">Hyun-Wook Choi</author>
  <maintainer email="danichoi737@gmail.com">Hyun-Wook Choi</maintainer>

  <!-- URL -->
  <url type="repository">https://github.com/danichoi737/folex.git</url>
  <url type="website">https://danichoi737.tistory.com/</url>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Export -->
  <export><metapackage/></export>
</package>
