<?xml version="1.0"?>
<package format="2">
  <name>folex_bringup</name>
  <version>0.1.0</version>
  <description>
    The folex_bringup package
  </description>

  <!-- License -->
  <license>TODO</license>

  <!-- Author and Maintainer -->
  <author email="danichoi737@gmail.com">Hyun-Wook Choi</author>
  <maintainer email="danichoi737@gmail.com">Hyun-Wook Choi</maintainer>

  <!-- URL -->
  <url type="repository">https://github.com/danichoi737/folex.git</url>
  <url type="website">https://danichoi737.tistory.com/</url>

  <!-- Dependencies -->
  
  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--    -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <exec_depend>rosserial_python</exec_depend>

  <!-- Export -->
  <export></export>
</package>
