<?xml version="1.0"?>
<package format="2">
  <name>folex_controller</name>
  <version>0.1.7</version>
  <description>
    The folex_controller package
  </description>

  <!-- License -->
  <license>TODO: License declaration</license>

  <!-- Author and Maintainer-->
  <author email="danichoi737@gmail.com">Daniel Choi</author>
  <maintainer email="danichoi737@gmail.com">Daniel Choi</maintainer>

  <!-- URL -->
  <url type="repository">https://github.com/danichoi737/folex</url>
  <url type="website">https://danichoi737.tistory.com</url>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>rosserial_python</exec_depend>

  <!-- Export -->
  <export>
  </export>
</package>
