<?xml version="1.0"?>
<package format="2">
  <name>folex_controller</name>
  <version>0.2.0</version>
  <description>
    FOLEX controller package
  </description>

  <!-- License -->
  <license>Apache 2.0 License</license>

  <!-- Author and Maintainer-->
  <author email="danichoi737@gmail.com">Hyunwook Choi</author>
  <maintainer email="danichoi737@gmail.com">Hyunwook Choi</maintainer>

  <!-- URL -->
  <url type="repository">https://github.com/danichoi737/folex</url>
  <url type="website">https://danichoi737.tistory.com</url>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamixel_sdk</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Export -->
  <export></export>
</package>
